src/test/custom/invalid/struct/structUndeclare.wacc
# Output:
# #semantic error#

# Program:

begin
  a x = new a {}
end